@@ -28,7 +28,10 @@ class ConfigurationDlg(ConfigurationFrm):
     def __init__(self, parent=None, name=None, modal=0, fl=0):
         
         ConfigurationFrm.__init__(self,parent,name,modal,fl)
-
+        
+        self.font_increase.setValue( \
+            get_config("non_latin_font_size_increase"))
+        
         self.leftAlign .setChecked(get_config("left_align"))
         self.keepLogs  .setChecked(get_config("keep_logs"))
         self.uploadLogs.setChecked(get_config("upload_logs"))
@@ -102,6 +105,9 @@ class ConfigurationDlg(ConfigurationFrm):
         self.uploadLogs     .setChecked(True)
         self.checkDuplicates.setChecked(True)
         self.duplicatesCats .setChecked(True)
+
+        self.font_increase.setValue(0)
+        self.grade_0_items.setValue(5)
         
         self.uploadServer.setText("mnemosyne-proj.dyndns.org:80")
         
@@ -120,7 +126,8 @@ class ConfigurationDlg(ConfigurationFrm):
         set_config("check_duplicates_when_adding",self.checkDuplicates.isOn())
         set_config("allow_duplicates_in_diff_cat",self.duplicatesCats.isOn())
         set_config("grade_0_items_at_once", self.grade_0_items.value())
-
+        set_config("non_latin_font_size_increase", self.font_increase.value())
+        
         update_logging_status()             
         
         self.close()
